descriptions for Austria's military foci

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -89,19 +89,33 @@ AUS_daimler:0 "Austro Daimler"
 AUS_skoda:0 "Škoda"
 
 AUS_military_expansion:0 "Expand the Austrian Military"
+AUS_military_expansion_desc:0 "Since the unification of Germany, the military has never truly been a priority for the Habsburgs, at least not to the extend of Germany or France or Russia. But now, with new threats both within and without, we simply cannot afford to sit idle. The Emperor has announced large scale funding increases to all of the three services, with more to come in the future."
 AUS_military_inf:0 "Reinforce the K.u.K Infantry"
-AUS_military_tank:0 "Create the K.u.K Panzertruppe"
+AUS_military_inf_desc:0 "Since time immemorial, the infantryman has been the most basic piece of the machinery of warfare. This simple truth is not likely to change anytime soon, and with the world slowing descending into chaos it is vital to strengthen that infantryman, who is all that stands between his country and chaos."
+AUS_military_tank:0 "Create the K.u.K Panzertruppen"
+AUS_military_tank_desc:0 "Previously, Panzers have been used in the army on an ad hoc basis, held in reserve to assist infantry advances and to fight enemy panzer units. Now, new ideas are permeating into the heads of the General Staff: ideas of war of mobility, panzers leading attacks and cutting through enemy lines. The establishment of an independent panzer corps is the first step to making these ideas reality."
 AUS_military_mountaineers:0 "Reinforce the K.u.K Gebirgstruppe"
+AUS_military_mountaineers_desc:0 "The mountaineers of the Gebirgstruppe form a barrier more potent than any Alp. These brave men have stood against Italian incursions time and time again, and with a little help from the government, they shall do so again."
 AUS_aviation_effort:0 "Reinforce the K.u.K. Luftfahrtruppen"
+AUS_aviation_effort_desc:0 "During the Weltkreig, the small Austria air force acted almost as a branch of the German Luftstreitskräfte. Our pilots and planes have been even less of a priority than our navy, leaving it in a terrible state and virtually useless against any real power that might threaten us. It is imperative this situation change and the Luftfahrtruppen are reformed."
 AUS_fighter_focus:0 "Fighter Focus"
+AUS_fighter_focus_desc:0 "The Staff of the Luftfahrtruppen have decided to focus on the integration and development of new monoplane designs, all metal and low winged beasts that will tear enemy planes from the sky and allow us total superiority over enemy lines."
 AUS_bomber_focus:0 "Bomber Focus"
+AUS_bomber_focus_desc:0 "The Staff of the Luftfahrtruppen have decided to expand and reinforce our bomber wing, enhancing our ability to attack the enemy in their forts and cities, far beyond our lines. Brand new all metal and large payload bombers controlling the battlefield is the way war shall be fought in the modern era."
 AUS_phoenix:0 "Phönix"
+AUS_phoenix_desc:0 "During the Weltkrieg, a small company in Vienna, bearing the name Phönix company has supplied our air force by producing licensed German planes for our market. Since then, the company has experimented with various designs, some of which might be the key to modernising the Luftfahrtruppen."
 AUS_mil_expanded:0 "The New K.u.K. Armee"
+AUS_mil_expanded_desc:0 "The reform of our army has been a long and expensive process, but it has finally paid off. New tanks, guns, ships and planes are rolling off the assembly lines and into our waiting armies, reformed and ready for battle with the enemies of the Empire!"
 AUS_naval_effort:0 "Reinforce the K.u.K Kriegsmarine"
+AUS_naval_effort_desc:0 "The K.u.K Kriegsmarine has always been underfunded and unappreciated by the Austrian government and her people. Without a colonial empire the navy never had any real backing or strategic purpose. However, this is a dangerous mentality, and with new syndicalist threats in the Mediterranean, whole new Kriegsmarine is vital to protect our heartlands."
 AUS_flexible_navy:0 "Flexible Warfare"
+AUS_flexible_navy_desc:0 "Our naval staff have decided to pursue a doctrine surrounding U-boats and convoy raiding, in order to be able to afflict as much damage as possible without having to face the overwhelming power of the French and British navies. Our unterseeboots will strike the enemy where it hurts most, in the economy."
 AUS_large_navy:0 "Large Navy Plan"
+AUS_large_navy_desc:0 "In line with traditional doctrine, the Kriegsmarine staff have decided to support the larger surface fleet we currently possess. Centred around larger and larger battleships and increasing our firepower through larger naval guns, these ideas will help us project our power and support land operations."
 AUS_capital_ships_effort:0 "Austrian Capital Ship Plan"
+AUS_capital_ships_effort_desc:0 "The staff have begun a concerted effort to improve upon our battleship designs, bringing more firepower to our battles. Increasing the size of the guns and the armoured belt allows our battleships to take far more of a beating leading attacks and deal far more damage in them as well."
 AUS_small_ships_effort:0 "Austrian Small Ship Plan"
+AUS_small_ships_effort_desc:0 "It has been decided that we need new models for destroyers and light cruisers, to combat enemy submarines and establish a surface presence. While our submarines are all well and good, larger ships are need to support land operations and do the tasks submarines do not have the firepower to complete."
 
 AUS_ausgleich:0 "1937 Ausgleich"
 
@@ -132,24 +146,24 @@ AUS_the_new_Empire:0 "The Greater Austrian Empire"
 
 ### Parties ###
 AUS_totalist_party:0 "TVP"
-AUS_radical_socialist_party:0 "SAB"
-AUS_syndicalist_party:0 "SAP"
-AUS_social_democrat_party:0 "SDAP"
-AUS_social_liberal_party:0 "LB"
-AUS_market_liberal_party:0 "NLP"
-AUS_social_conservative_party:0 "LB"
-AUS_authoritarian_democrat_party:0 "CSP"
-AUS_paternal_autocrat_party:0 "GDVP"
-AUS_national_populist_party:0 "HB"
 AUS_totalist_party_long:0 "Totalitäre Volkspartei"
+AUS_radical_socialist_party:0 "SAB"
 AUS_radical_socialist_party_long:0 "Sozialistische Arbeiterbewegung"
+AUS_syndicalist_party:0 "SAP"
 AUS_syndicalist_party_long:0 "Sozialistische Arbeiterpartei"
+AUS_social_democrat_party:0 "SDAP"
 AUS_social_democrat_party_long:0 "Sozialdemokratische Arbeiterpartei"
+AUS_social_liberal_party:0 "LB"
 AUS_social_liberal_party_long:0 "Liberale Bewegung"
+AUS_market_liberal_party:0 "NLP"
 AUS_market_liberal_party_long:0 "Nationalliberale Partei"
+AUS_social_conservative_party:0 "LB"
 AUS_social_conservative_party_long:0 "Landbund"
+AUS_authoritarian_democrat_party:0 "CSP"
 AUS_authoritarian_democrat_party_long:0 "Christlichsoziale Partei"
+AUS_paternal_autocrat_party:0 "GDVP"
 AUS_paternal_autocrat_party_long:0 "Großdeutsche Volkspartei"
+AUS_national_populist_party:0 "HB"
 AUS_national_populist_party_long:0 "Heimatblock"
 
 ### Traits ###
