Small Fengtian tree fixes (Still in NYC)

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -118,9 +118,9 @@ FNG_Expand_the_Fushun_Mines:0 "Expand the Fushun Mines"
 FNG_Expand_the_Fushun_Mines_desc:0 "The mines around Fushun churn out nearly 11 million tons of coal per year, with deposits promising to produce over 4.5 billion tonnes total. While some modern trains and ships in the West use oil, the Japanese Empire runs on coal, and the strategic significance of these mines cannot be understated."
 FNG_Yingkou_Commercial_Development:0 "Yingkou Commercial Development"
 FNG_Yingkou_Commercial_Development_desc:0 "The port city of Yingkou serves as Fengtian's primary gateway to the world, and the second largest port on the Bohai Gulf after Japanese-controlled Dalian. The tremendous increase in material production in Fengtian demands an equally large investment in commercial infrastructure."
-#Develop the Four Provinces Section
-FNG_Develop_the_Four_Provinces:0 "Develop the Four Provinces"
-FNG_Develop_the_Four_Provinces_desc:0 "The Four Provinces of Manchuria, Heilongjiang, Jilin, Liaoning, and Inner Manchuria, already contain over 30% of China's railroads and feature relatively widespread heavy industry, but if Fengtian is to move into the future these will have to be expanded upon and improved. Ideally this would be achieved solely by the Chinese people, but reality dictates that the Japanese will lead much of the path forward."
+#Develop the Nine Provinces Section
+FNG_Develop_the_Nine_Provinces:0 "Develop the Nine Provinces"
+FNG_Develop_the_Nine_Provinces_desc:0 "The Nine Provinces of Manchuria, split from the original three, already contain over 30% of China's railroads and feature relatively widespread heavy industry, but if Fengtian is to move into the future these will have to be expanded upon and improved. Ideally this would be achieved solely by the Chinese people, but reality dictates that the Japanese will lead much of the path forward."
 FNG_Reorganize_the_NTC:0 "Reorganise the NTC"
 FNG_Reorganize_the_NTC_desc:0 "Founded by the Fengtian Government shortly after its creation, the National Transportation Commission serves as a planning board for infrastructure construction across the country. The Japanese allege that its foremost aim is to disrupt Mantetsu's operations, and there may be at least some truth to this claim."
 #Resume the Wang Yongjiang Reforms Section
