~60 New SA provinces
+ PLC Work

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -82,7 +82,7 @@ PLC_lithuanian_structure:0 "Lithuanian Infrastructure"
 PLC_polish_monopolies:0 "Polish Corporate Monopolies"
 PLC_polish_farms:0 "Modernise Polish Farming"
 PLC_steel_factories:0 "Steel Factories"
-PLC_tungsten_mining:0 "Tungsten Mining"
+PLC_tungsten_mining:0 "The Baltic Oil Shelf"
 PLC_urban_districts:0 "New Urban Districts"
 PLC_lithuanian_corporations:0 "Lithuanian Corporations"
 PLC_reform_economy:0 "Emergency Economic Reforms"
