Ukrainian military focus tree is completed

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -303,6 +303,32 @@ UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the si
 
 UKR_Reorg_army:0 "New army of Ukraine"
 UKR_Reorg_army_desc:0 "The army of Ukraine is in poor condition as the Kingdom itself. But though the Berlin Stock Crisis made us reduce the military budget, but we still have enough money to launch the new reform, which will allow us to reorganize the Ministry of defence. It's time to strengthen our independence and secure our borders from the various enemies of Ukraine."
+UKR_Mobile:0 "Plans of Chernyakhovsky"
+UKR_Mobile_desc:0 "Ivan Chernyakhovsky is an young, but ambitious colonel, who has already unterstood that the future wars would be won by the heavy industry and machines - and now he demands that Ukraine should do its best to provide the army with the tanks and trucks. Their speed will help use to use the element of surprise for our profit."
+UKR_Mobile_Forces:0 "Trucks for the Fatherland"
+UKR_Mobile_Forces_desc:0 "The trucks are very important for any modern army - that's why we have to use our industry and build a new model of the trucks, which allow us to weaken our dependence from the cavalry and the horses."
+UKR_Tank_Forces:0 "Tanks!"
+UKR_Tank_Forces_desc:0 "One tank can replace more than ten soldiers on the battleground - that's why we have to build as many tanks as we can to create one of the strongest armies in the Eastern Europe!"
+UKR_Grand_Battle:0 "Encircled nation"
+UKR_Grand_Battle_desc:0 "Unfortunately our enemies won't disappear as the water on the Sun as our national anthem states, but we can be prepared for an any unfriendly action, if we prepare our battle plans beforehand. Let's do it! "
+UKR_Firepower:0 "Thunder and Lightning"
+UKR_Firepower_desc:0 "Artillery is the real god of war. Using the old tsarist and new German factories, we can make the artillery play the significant role in the Ukrainian army and send the shells on the heads of our enemies."
+UKR_Infantry1:0 "Infantry equipment"
+UKR_Infantry1_desc:0 "The Ukrainian soldier should be well equipped, if we want him to fight for Ukraine. Our General Staff will discuss, which arms our divisions are needed."
+UKR_Doct1:0 "Foreign experience"
+UKR_Doct1_desc:0 "Lots of wars happened since the proclamation of our independence in 1918. Now is the time, when we have to rethink their lessons and results of these wars to understand the actual problems of our army and the possible methods, which can be used to improve it."
+UKR_Art1:0 "Artillery research"
+UKR_Art1_desc:0 "Artillery is very important for any modern army. We have to do everything possible to analyze the possibilities, which artillery can give to the Ukrainian army."
+UKR_Massive:0 "Army of the peasants"
+UKR_Massive_desc:0 "Ukraine is one of the most populated countries in the Eastern Europe. We can use the children of the farmers on the battlegrounds of Europe, but at first we should understand, where they can bring more benefits for the country."
+UKR_Massive_inf1:0 "Equipment effort"
+UKR_Massive_inf1_desc:0 "The Weltkrieg led to the invention of many arms, that are handy in battle. They must be improved and sent to our soldiers as well as the new cheap, but multiple rifles and carabines."
+UKR_Massive_inf2:0 "Arms for the army"
+UKR_Massive_inf2_desc:0 "We have already spent a lot of time to create the equipment for various purposes. But our army demand, that the equipment is still not perfect for the needs of the soldiers and officers."
+UKR_Massive_doct:0 "Idea for the soldiers"
+UKR_Massive_doct_desc:0 "We have many soldiers and many rifles. Someone can say that such an army is weaker than the army with the tanks and artillery, but we will definitely find out, how this army can be used at the struggle with our enemies."
+UKR_New_Army_UKR:0 "Army is reorganized"
+UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganized by the Ministry of defence and our General Stsff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
 
 UKR_Newforpol:0 "New foreign policy"
 UKR_Newforpol_desc:0 "-"
