Close but no cigar

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -556,7 +556,7 @@ annex.144.d:0 "After a short campaign across the island of Cuba, we have finally
 annex.144.a:0 "Liberate Cuba under a friendly government!"
 annex.144.b:0 "Continue with military occupation!"
 annex.145.t:0 "The Fate of Mexico"
-annex.145.d:0 "After a long campaign across Mexico, we have finally managed to shatter the Mexican defenses. Havana is now in our hands! We must now decide on the future of Mexico."
+annex.145.d:0 "After a long campaign across Mexico, we have finally managed to shatter the Mexican defenses. Mexico City is now in our hands! We must now decide on the future of Mexico."
 annex.145.a:0 "Liberate Mexico under a friendly government!"
 annex.145.b:0 "Continue with military occupation!"
 
