--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -36,12 +36,14 @@ UKR_radical_socialist_party:0 "Borotbists"
 UKR_radical_socialist_party_long:0 "Ukrainskaya Sotsial-Revolutsionnaya partiya"
 UKR_social_democrat_party:0 "UPSF"
 UKR_social_democrat_party_long:0 "Ukrainskaya Partiya Sotsialistov-Federalistov"
-UKR_market_liberal_party:0 "USP"
-UKR_market_liberal_party_long:0 "Ukrainskaya Selskaya Partiya"
+UKR_market_liberal_party:0 "UNP"
+UKR_market_liberal_party_long:0 "Ukrainskaya Narodnaya Partiya"
+UKR_social_liberal_party:0 "USP"
+UKR_social_liberal_party_long:0 "Ukrainskaya Selskaya Partiya"
 UKR_social_conservative_party:0 "ViN"
 UKR_social_conservative_party_long:0 "Vera i Narod"
 UKR_authoritarian_democrat_party:0 "UNS"
-UKR_authoritarian_democrat_party_long:0 "Ukrainskiy Natsionalnyi Soyuz"
+UKR_authoritarian_democrat_party_long:0 "Ukrainskiy Natsionalno-Gosudarstvenniy Soyuz"
 UKR_paternal_autocrat_party:0 "VSZ"
 UKR_paternal_autocrat_party_long:0 "Vseukrainskiy Soyuz Zemstv"
 UKR_national_populist_party:0 "OUN"
