--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1211,6 +1211,27 @@ pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
 POL_gminy_tooltip:0 "You will gain 5 Militia Divisions. \n"
 POL_polish_state:0 "You will abolish the monarchy and form the new Polish State."
 
+POL_totalist_party:0 "Free Worker's Party"
+POL_totalist_party_long:0 "The Free Worker's Party"
+POL_syndicalist_party:0 "Syndicalist Party"
+POL_syndicalist_party_long:0 "The Syndicalist Party"
+POL_radical_socialist_party:0 "Socialist Coalition"
+POL_radical_socialist_party_long:0 "The Socialist Coalition"
+POL_social_democrat_party:0 "Free Polish Party"
+POL_social_democrat_party_long:0 "The Free Polish Party"
+POL_social_liberal_party:0 "People's Coalition"
+POL_social_liberal_party_long:0 "The People's Coalition"
+POL_market_liberal_party:0 "Democartic Party"
+POL_market_liberal_party_long:0 "The Democartic Party"
+POL_social_conservative_party:0 "Patriotic Party"
+POL_social_conservative_party_long:0 "The Patriotic Party"
+POL_authoritarian_democrat_party:0 "Monarchist Party"
+POL_authoritarian_democrat_party_long:0 "The Monarchist Party"
+POL_paternal_autocrat_party:0 "Centralist Party"
+POL_paternal_autocrat_party_long:0 "The Centralist Party"
+POL_national_populist_party:0 "National-Radical Party"
+POL_national_populist_party_long:0 "The National-Radical Party"
+
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
 CAN_isac_created:0 "The ISAC has been created"
