why do i need to merge again?

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -885,14 +885,14 @@ ott.144.t:0 ""
 ott.144.d:0 ""
 ott.144.a:0 ""
 
-ott.145.t:0 ""
-ott.145.d:0 ""
-ott.145.a:0 ""
-ott.145.b:0 ""
-ott.145.c:0 ""
-ott.145.e:0 ""
+ott.145.t:0 "Renegotiating German Debt"
+ott.145.d:0 "The massive OPDA payments collected by the German Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Germany finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they need badly right about now..."
+ott.145.a:0 "Offer weapons and supplies"
+ott.145.b:0 "Offer consumer goods"
+ott.145.c:0 "Offer one-time cash payment"
+ott.145.e:0 "We shall simply declare default"
 
-ott.146.t:0 ""
+ott.146.t:0 "The Ottomans "
 ott.146.d:0 ""
 ott.146.a:0 ""
 
@@ -965,7 +965,7 @@ ott.163.d:0 ""
 ott.163.a:0 ""
 
 ott.164.t:0 "The issue of Yemen"
-ott.164.d:0 "Endless revolts in the Yemen Vilayet had forced the Ottoman Empire to negotiate the Treaty of Da'an (1911) with the Imam Yahya of Yemen. According to the treaty, the Zaydi Imam was given the power to appoint governors and judges in Shia-majority areas, as well as collect taxes from his followers, while remaining under Ottoman authority. The Ottomans still administered the Sunni areas and maintained a sizeable garrison force. Following the conclusion of the Weltkrieg, Yemen was isolated from the rest of the empire. The Zaydi Imam renewed his oath of allegiance to the Ottoman Sultan, but also extended his authority over our entire Vilayet. Now that we border Yemen once again, how shall we proceed?"
+ott.164.d:0 "Endless revolts in the Yemen Vilayet had forced the Ottoman Empire to negotiate the Treaty of Da'an (1911) with the Imam Yahya of Yemen. According to the treaty, the Zaydi Imam was given the power to appoint governors and judges in Shia-majority areas, as well as collect taxes from his followers, while remaining under Ottoman authority. The Ottomans still administered the Sunni areas and maintained a sizeable garrison force. Following the conclusion of the Weltkrieg, Yemen was isolated from the rest of the empire. The Zaydi Imam had renewed his oath of allegiance to the Ottoman Sultan, but also extended his authority over our entire Vilayet. Now that we border Yemen once again, how shall we proceed?"
 ott.164.a:0 "Demand that Yemen acknowledge the 1911 treaty"
 ott.164.b:0 "Proceed with the invasion"
 
@@ -994,7 +994,7 @@ ott.169.a:0 "Respond with a purebred Akhal-Teke!"
 ott.169.b:0 "We don't need gifts from the filthy Oghuz!"
 
 ott.170.t:0 "Emir of Bukhara sends a purebred warhorse!"
-ott.170.d:0 "Today we received a tall warhorse of glorious beauty from the Emir of Bukhara, in exchange for the custom rifle we had sent him. The ambassadors also brought a letter from [From.GetLeader], who wrote that he wished to see our blood relations be reinforced by mutual friendly relations maintained for all eternity. The shiny golden horse is named Kamarbay, and walks as if it flows through the air. Indeed, this is a gift fit for a Sultan."
+ott.170.d:0 "Today we received a tall warhorse of glorious beauty from the Emir of Bukhara, in exchange for the custom rifle we had sent him. The ambassadors also brought a letter from [From.GetLeader], who wrote that he wished to see our blood relations be reinforced by mutual friendly relations maintained for all eternity. The shiny golden horse is named Kamarbay, and walks as if it flows through the air. Indeed, this is a gift worthy of a Sultan."
 ott.170.a:0 "You have bested us in generosity, [From.GetLeader]"
 
 ott.171.t:0 "Turkestan throws out our ambassadors!"
@@ -1010,7 +1010,7 @@ ott.173.d:0 "Our gendarmerie, with the aid of locals, has uncovered a network of
 ott.173.a:0 "Preposterous!"
 
 ott.174.t:0 "Ottoman traitors caught in Ağrı"
-ott.174.d:0 "During the ongoing operation against syndicalist interference in our Eastern provinces, a company-sized unit of our gendarmerie force was ambushed by Kurdish tribesmen near the Armenian border. Reinforcements from the army were quick to arrive on the scene, and the rebels were swiftly routed. While many of them managed to cross the border into Persia, our cavalry units managed to surround a small group of bandits who immediately surrendered. Among them were several Ottoman officers, including İhsan Nuri Bey. To everyone's surprise, a brief inquiry into the population records showed that these Ottoman-educated officers were not of Kurdish background, but instead had Armenian and Georgian ancestry. While it is not entirely clear why they were championing the cause of Kurdish separatism, it is evident that a wider conspiracy is at work..."
+ott.174.d:0 "In course of the ongoing operation against syndicalist interference in our Eastern provinces, a company-sized unit of our gendarmerie force was ambushed by Kurdish tribesmen near the Armenian border. Reinforcements from the army were quick to arrive on the scene, and the rebels were swiftly routed. While many of them managed to cross the border into Persia, our cavalry units managed to surround a small group of bandits who immediately surrendered. Among them were several Ottoman officers, including İhsan Nuri Bey. To everyone's surprise, a brief inquiry into the population records showed that these Ottoman-educated officers were not of Kurdish background, but instead had Armenian and Georgian ancestry. While it is not entirely clear why they were championing the cause of Kurdish separatism, it is evident that a wider conspiracy is at work..."
 ott.174.a:0 "Why would such groups infiltrate our military?"
 
 ott.175.t:0 "Druze revolt dispersed in Syria"
@@ -1022,5 +1022,5 @@ ott.176.d:0 "Thanks to an anonymous tip, two shipping containers full of rifles 
 ott.176.a:0 "We will get to the bottom of this..."
 
 ott.177.t:0 "Hashemite spies caught in Damascus"
-ott.177.d:0 "Our gendarmerie, working together with local law enforcement, has managed to arrest several Hashemite spies in Damascus. Detailed military maps of the region and intelligence notes on Ottoman military strength were found in the possession of these agents. Their mission seems to be the formation of clandestine cells across Syria, which would be activated in case of war between Arabian states and the Ottoman Empire."
+ott.177.d:0 "Our gendarmerie, working together with local law enforcement, has managed to arrest several Hashemite spies in Damascus. Detailed maps of the region and intelligence notes on Ottoman military strength were found in the possession of these agents. Their mission seems to be the formation of clandestine cells across Syria, which would be activated in case of war between Arabian states and the Ottoman Empire."
 ott.177.a:0 "Such scheming will not go unpunished..."
