--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -47,6 +47,7 @@ ott_opda_idea:0 "OPDA"
 ott_opda_idea_1:0 "OPDA"
 ott_opda_idea_2:0 "OPDA"
 ott_opda_idea_3:0 "OPDA"
+OTT_opda_payments:0 "Ottoman Debt Payments"
 ott_black_monday:0 "Black Monday"
 ott_black_monday1:0 "Black Monday"
 ott_black_monday2:0 "Black Monday"
@@ -886,83 +887,98 @@ ott.144.d:0 ""
 ott.144.a:0 ""
 
 ott.145.t:0 "Renegotiating German Debt"
-ott.145.d:0 "The massive OPDA payments collected by the German Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Germany finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they need badly right about now..."
+ott.145.d:0 "The massive OPDA payments collected by the German Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Germany finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they badly need right about now..."
 ott.145.a:0 "Offer weapons and supplies"
 ott.145.b:0 "Offer consumer goods"
-ott.145.c:0 "Offer one-time cash payment"
+ott.145.c:0 "Offer one-time payment"
 ott.145.e:0 "We shall simply declare default"
 
-ott.146.t:0 "The Ottomans "
-ott.146.d:0 ""
-ott.146.a:0 ""
+ott.146.t:0 "The Ottomans want to negotiate!"
+ott.146.d:0 "Ottoman diplomats in Berlin have informed our Foreign Ministry that they have cancelled their loan payments to us. Instead of regular payments, they offer to send us weapons and supplies produced under German license as compensation for our investments. It is clear that refusing this offer may result in a unilateral declaration of default by the Ottoman government. Shall we accept the offer?"
+ott.146.a:0 "We need those weapons"
+ott.146.b:0 "Reject their offer"
 
-ott.147.t:0 ""
-ott.147.d:0 ""
-ott.147.a:0 ""
+ott.147.t:0 "The Ottomans want to negotiate!"
+ott.147.d:0 "Ottoman diplomats in Berlin have informed our Foreign Ministry that they have cancelled their loan payments to us. Instead of regular payments, they offer to send us consumer goods as compensation for our investments. It is clear that refusing this offer may result in a unilateral declaration of default by the Ottoman government. Shall we accept the offer?"
+ott.147.a:0 "This will help ease the burden of the German people"
+ott.147.b:0 "Reject their offer"
 
-ott.148.t:0 ""
-ott.148.d:0 ""
-ott.148.a:0 ""
+ott.148.t:0 "The Ottomans want to negotiate!"
+ott.148.d:0 "Ottoman diplomats in Berlin have informed our Foreign Ministry that they have cancelled their loan payments to us. Instead of regular payments, they offer to send us a large one-time payment of gold as compensation for our investments. It is clear that refusing this offer may result in a unilateral declaration of default by the Ottoman government. Shall we accept the offer?"
+ott.148.a:0 "This is better than nothing"
+ott.148.b:0 "Reject their offer"
 
-ott.149.t:0 ""
-ott.149.d:0 ""
-ott.149.a:0 ""
+ott.149.t:0 "Germans accept the terms!"
+ott.149.d:0 "Faced with the implied threat of unilateral default, the German Empire was forced to accept our terms and acknowledge the end of OPDA payments."
+ott.149.a:0 "Auspicious news!"
 
-ott.150.t:0 ""
-ott.150.d:0 ""
-ott.150.a:0 ""
+ott.150.t:0 "Germans reject the terms!"
+ott.150.d:0 "The German Empire has rejected our alternative repayment plan and insisted we continue to pay our full debt as scheduled. Shall we offer them a single payment in gold?"
+ott.150.a:0 "Offer one-time payment"
+ott.150.b:0 "We have no choice but to default"
 
-ott.151.t:0 ""
-ott.151.d:0 ""
-ott.151.a:0 ""
+ott.151.t:0 "The Ottomans make another offer!"
+ott.151.d:0 "After our rejection of their initial proposal, the Ottoman Empire has offered to make a single large payment in gold. Our diplomats warn us that refusing will force the Ottomans to declare a default."
+ott.151.a:0 "We agree to the terms"
+ott.151.b:0 "Reject their offer"
 
-ott.152.t:0 ""
-ott.152.d:0 ""
-ott.152.a:0 ""
+ott.152.t:0 "Germans reject our payment!"
+ott.152.d:0 "The German Empire has rejected our payment in gold. Since they cannot be made to see reason, we are forced to cease all debt payments to them..."
+ott.152.a:0 "Declare default"
 
-ott.153.t:0 ""
-ott.153.d:0 ""
-ott.153.a:0 ""
+ott.153.t:0 "Ottoman Empire declares default!"
+ott.153.d:0 "The Ottoman Empire has defaulted on their debts to us! The regular loan repayments that we have collected since 1881 have been halted, and our seats in the Ottoman Public Debt Administration have been vacated by an Imperial Decree of the Sultan. How shall we react to this insolence?"
+ott.153.a:0 "Enforce an embargo!"
+ott.153.b:0 "This means WAR!"
 
-ott.154.t:0 ""
-ott.154.d:0 ""
-ott.154.a:0 ""
+ott.154.t:0 "Renegotiating German Debt"
+ott.154.d:0 "The OPDA payments collected by the Austrian Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Austria finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they badly need right about now..."
+ott.154.a:0 "Offer weapons and supplies"
+ott.154.b:0 "Offer consumer goods"
+ott.154.c:0 "Offer one-time payment"
+ott.154.e:0 "We shall simply declare default"
 
-ott.155.t:0 ""
-ott.155.d:0 ""
-ott.155.a:0 ""
+ott.155.t:0 "The Ottomans want to negotiate!"
+ott.155.d:0 "Ottoman diplomats in Vienna have informed our Foreign Ministry that they have cancelled their loan payments to us. Instead of regular payments, they offer to send us weapons and supplies produced under German license as compensation for our investments. It is clear that refusing this offer may result in a unilateral declaration of default by the Ottoman government. Shall we accept the offer?"
+ott.155.a:0 "We need those weapons"
+ott.155.b:0 "Reject their offer"
 
-ott.156.t:0 ""
-ott.156.d:0 ""
-ott.156.a:0 ""
+ott.156.t:0 "The Ottomans want to negotiate!"
+ott.156.d:0 "Ottoman diplomats in Vienna have informed our Foreign Ministry that they have cancelled their loan payments to us. Instead of regular payments, they offer to send us consumer goods as compensation for our investments. It is clear that refusing this offer may result in a unilateral declaration of default by the Ottoman government. Shall we accept the offer?"
+ott.156.a:0 "This will help ease the burden of the Austrian people"
+ott.156.b:0 "Reject their offer"
 
-ott.157.t:0 ""
-ott.157.d:0 ""
-ott.157.a:0 ""
+ott.157.t:0 "The Ottomans want to negotiate!"
+ott.157.d:0 "Ottoman diplomats in Vienna have informed our Foreign Ministry that they have cancelled their loan payments to us. Instead of regular payments, they offer to send us a large one-time payment of gold as compensation for our investments. It is clear that refusing this offer may result in a unilateral declaration of default by the Ottoman government. Shall we accept the offer?"
+ott.157.a:0 "This is better than nothing"
+ott.157.b:0 "Reject their offer"
 
-ott.158.t:0 ""
-ott.158.d:0 ""
-ott.158.a:0 ""
+ott.158.t:0 "Austrians accept the terms!"
+ott.158.d:0 "Faced with the implied threat of unilateral default, the Austrian Empire was forced to accept our terms and acknowledge the end of OPDA payments."
+ott.158.a:0 "Auspicious news!"
 
-ott.159.t:0 ""
-ott.159.d:0 ""
-ott.159.a:0 ""
+ott.159.t:0 "Austrians reject the terms!"
+ott.159.d:0 "The Austrian Empire has rejected our alternative repayment plan and insisted we continue to pay our full debt as scheduled. Shall we offer them a single payment in gold?"
+ott.159.a:0 "Offer one-time payment"
+ott.159.b:0 "We have no choice but to default"
 
-ott.160.t:0 ""
-ott.160.d:0 ""
-ott.160.a:0 ""
+ott.160.t:0 "The Ottomans make another offer!"
+ott.160.d:0 "After our rejection of their initial proposal, the Ottoman Empire has offered to make a single large payment in gold. Our diplomats warn us that refusing will force the Ottomans to declare a default."
+ott.160.a:0 "We agree to the terms"
+ott.160.b:0 "Reject their offer"
 
-ott.161.t:0 ""
-ott.161.d:0 ""
-ott.161.a:0 ""
+ott.161.t:0 "Austrians reject our payment!"
+ott.161.d:0 "The Austrian Empire has rejected our payment in gold. Since they cannot be made to see reason, we are forced to cease all debt payments to them..."
+ott.161.a:0 "Declare default"
 
-ott.162.t:0 ""
-ott.162.d:0 ""
-ott.162.a:0 ""
+ott.162.t:0 "Ottoman Empire declares default!"
+ott.162.d:0 "The Ottoman Empire has defaulted on their debts to us! The regular loan repayments that we have collected since 1881 have been halted, and our seat in the Ottoman Public Debt Administration has been vacated by an Imperial Decree of the Sultan. How shall we react to this insolence?"
+ott.162.a:0 "Enforce an embargo!"
+ott.162.b:0 "This means WAR!"
 
-ott.163.t:0 ""
-ott.163.d:0 ""
-ott.163.a:0 ""
+ott.163.t:0 "End of the OPDA"
+ott.163.d:0 "A grand ceremony was held in Kostantiniyye today, as the prestigious public university Mekteb-i Mülkiye-i Şahane officially moved into the building once used as the Headquarters of Ottoman Public Debts Administration. After half a century of humiliation, we have finally broken free of our chains. No longer shall we pay tribute to the European states, and no longer shall we let them dictate our nation's course through history. Since the official dissolvement of OPDA, our treasury has been experiencing a remarkable influx of funds; and numerous projects await our approval."
+ott.163.a:0 "Onwards to a new future!"
 
 ott.164.t:0 "The issue of Yemen"
 ott.164.d:0 "Endless revolts in the Yemen Vilayet had forced the Ottoman Empire to negotiate the Treaty of Da'an (1911) with the Imam Yahya of Yemen. According to the treaty, the Zaydi Imam was given the power to appoint governors and judges in Shia-majority areas, as well as collect taxes from his followers, while remaining under Ottoman authority. The Ottomans still administered the Sunni areas and maintained a sizeable garrison force. Following the conclusion of the Weltkrieg, Yemen was isolated from the rest of the empire. The Zaydi Imam had renewed his oath of allegiance to the Ottoman Sultan, but also extended his authority over our entire Vilayet. Now that we border Yemen once again, how shall we proceed?"
@@ -1010,7 +1026,7 @@ ott.173.d:0 "Our gendarmerie, with the aid of locals, has uncovered a network of
 ott.173.a:0 "Preposterous!"
 
 ott.174.t:0 "Ottoman traitors caught in Ağrı"
-ott.174.d:0 "In course of the ongoing operation against syndicalist interference in our Eastern provinces, a company-sized unit of our gendarmerie force was ambushed by Kurdish tribesmen near the Armenian border. Reinforcements from the army were quick to arrive on the scene, and the rebels were swiftly routed. While many of them managed to cross the border into Persia, our cavalry units managed to surround a small group of bandits who immediately surrendered. Among them were several Ottoman officers, including İhsan Nuri Bey. To everyone's surprise, a brief inquiry into the population records showed that these Ottoman-educated officers were not of Kurdish background, but instead had Armenian and Georgian ancestry. While it is not entirely clear why they were championing the cause of Kurdish separatism, it is evident that a wider conspiracy is at work..."
+ott.174.d:0 "In course of the ongoing operations against syndicalist interference in our Eastern provinces, a company-sized unit of our gendarmerie force was ambushed by Kurdish tribesmen near the Armenian border. Reinforcements from the army were quick to arrive on the scene, and the rebels were swiftly routed. While many of them managed to cross the border into Persia, our cavalry units managed to surround a small group of bandits who immediately surrendered. Among them were several Ottoman officers, including İhsan Nuri Bey. To everyone's surprise, a brief inquiry into the population records showed that these Ottoman-educated officers were not of Kurdish background, but instead had Armenian and Georgian ancestry. While it is not entirely clear why they were championing the cause of Kurdish separatism, it is evident that a wider conspiracy is at work..."
 ott.174.a:0 "Why would such groups infiltrate our military?"
 
 ott.175.t:0 "Druze revolt dispersed in Syria"
