Administrative borders in White Ruthenia changed

--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -203,7 +203,7 @@ STATE_200:0 "Oleksandrivsk"
 STATE_201:0 "Zhytomyr"
 STATE_202:0 "Kyiv"
 STATE_203:0 "Cherkasy"
-STATE_204:0 "Babruysk"
+STATE_204:0 "Polesie"
 STATE_205:0 "Kaluga"
 STATE_206:0 "Minsk"
 STATE_207:0 "Orsha"
