Ukrainian border revision is finished.

--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -92,8 +92,8 @@ STATE_89:0 "Stanislawow"
 STATE_90:0 "Kielce"
 STATE_91:0 "Lwow"
 STATE_92:0 "Lublin"
-STATE_93:0 "Rivne"
-STATE_94:0 "Brest-Litovsk"
+STATE_93:0 "Berestya"
+STATE_94:0 "Baranavichy"
 STATE_95:0 "Navahrudak"
 STATE_96:0 "Mahilyow"
 STATE_97:0 "Bialystok"
@@ -198,12 +198,12 @@ STATE_195:0 "Petrograd"
 STATE_196:0 "Kherson"
 STATE_197:0 "Mykolaiv"
 STATE_198:0 "Vinnytsia"
-STATE_199:0 "Khotyn"
+STATE_199:0 "Proskuriv"
 STATE_200:0 "Oleksandrivsk"
 STATE_201:0 "Zhytomyr"
 STATE_202:0 "Kyiv"
 STATE_203:0 "Cherkasy"
-STATE_204:0 "Polesie"
+STATE_204:0 "Pinsk"
 STATE_205:0 "Kaluga"
 STATE_206:0 "Minsk"
 STATE_207:0 "Orsha"
@@ -791,7 +791,7 @@ STATE_788:0 "Southern Gansu"
 STATE_789:1 "Székelyföld"
 STATE_790:1 "Rakhine"
 STATE_791:0 "Mohyliv-Podilskyi"
-STATE_792:0 "Proskuriv"
+STATE_792:0 "Rivne"
 STATE_793:1 "Asturias"
 STATE_794:0 "Srijem"
 STATE_795:0 "Triest"
