--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -155,7 +155,7 @@ VICTORY_POINTS_3335:0 "Bryansk"
 VICTORY_POINTS_3338:0 "Archangelsk"
 VICTORY_POINTS_3369:0 "Bristol"
 VICTORY_POINTS_3379:0 "Belfast"
-VICTORY_POINTS_3392:0 "Brest-Litovsk"
+VICTORY_POINTS_3392:0 "Berestya"
 VICTORY_POINTS_3393:0 "Gardinas"
 VICTORY_POINTS_3396:0 "Galway"
 VICTORY_POINTS_3456:0 "Karachi"
